--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "swiper": "^11.1.4",
-    "three": "^0.165.0",
-    "vanta": "^0.5.24"
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "eslint": "^8",
